--- a/src/Fub/Fub.csproj
+++ b/src/Fub/Fub.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
 	  <WarningsAsErrors>nullable</WarningsAsErrors>
 	  <LangVersion>latest</LangVersion>
+	  <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net461|AnyCPU'">
