--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,32 +5,13 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: CmdLine@2
-  inputs:
-    script: 'dotnet --version'
-    
-- task: UseDotNet@2
-  inputs:
-    packageType: 'sdk'
-    version: '6.0.201'
-
-- task: CmdLine@2
-  inputs:
-    script: 'dotnet --version'
-
 - task: DotNetCoreCLI@2
   inputs:
-    majorVersion: 6
-    minorVersion: 0
-    patchVersion: 201
     command: 'build'
-    projects: '**/*.csproj'
+    projects: src/Fub/Fub.csproj
 
 - task: DotNetCoreCLI@2
   inputs:
-    majorVersion: 6
-    minorVersion: 0
-    patchVersion: 201
     command: 'test'
     projects: |
       src/Fub.Tests/Fub.Tests.csproj
