--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,5 @@ steps:
     nobuild: true
     versioningScheme: byEnvVar
     versionEnvVar: NugetPackageVersion
+    outputDir: '$(Build.ArtifactStagingDirectory)'
     
