--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,12 +6,14 @@ pool:
 
 steps:
 - task: DotNetCoreCLI@2
+  name: Build
   inputs:
     command: 'build'
     projects: src/Fub/Fub.csproj
     arguments: -c Release
     
 - task: DotNetCoreCLI@2
+  name: Test
   inputs:
     command: 'test'
     projects: |
@@ -20,6 +22,7 @@ steps:
     arguments: -c Release
       
 - task: DotNetCoreCLI@2
+  name: Pack
   inputs:
     command: 'pack'
     packagesToPack: 'src/Fub/Fub.csproj'
