Squashed commit of the following:
commit b84b6336bed07b3b789a64ad36ed1b3af1a65114
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 15:08:16 2022 +0100

    Removed test directory name 'kaas'

commit 9c931e1ff3eb6f514b10ee6c72d144549a54d853
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 15:05:49 2022 +0100

    Publish artifact task

commit fbbdc428f6dff1dd59205d9182ef8f1181de572c
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 14:58:19 2022 +0100

    Looking for packDirectory in log

commit f4ca6504d2eed4ab4df3e8d34f847c049f4ef6d7
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 14:54:00 2022 +0100

    Pack directory

commit 2427f2b0bb3b0d19bb4c52fd4403ee0e210a2d60
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 14:53:25 2022 +0100

    Named tasks

commit 98a600254ec4e48c8f25872bd1b040b034c0e850
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 14:49:29 2022 +0100

    Test outputDir

commit b7b45667444c6066008ce383bc7b54b51613072a
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 14:46:36 2022 +0100

    Release configuration by argument -c

commit 9256e80acd21d26dbf345c7d0f81ba70c9fa6d41
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 14:39:54 2022 +0100

    Trying dotnet pack instead of nuget pack

commit cace86a260190420f2ee0bdd0faaa7198f619347
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 14:28:26 2022 +0100

    Build Release

commit eb8e4f706e6de28a0be091e274c5c64eb6849336
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 14:21:01 2022 +0100

    WIP auto incrementing package version

commit a94ea307f19ee4781739a9661d660f4474373a1d
Author: TobiasvdVen <tobiasvdven@hotmail.com>
Date:   Sat Mar 19 13:51:56 2022 +0100

    Testing nuget pack

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,13 +6,35 @@ pool:
 
 steps:
 - task: DotNetCoreCLI@2
+  name: Build
   inputs:
     command: 'build'
     projects: src/Fub/Fub.csproj
-
+    arguments: -c Release
+    
 - task: DotNetCoreCLI@2
+  name: Test
   inputs:
     command: 'test'
     projects: |
       src/Fub.Tests/Fub.Tests.csproj
       src/Fub.InternalTests/Fub.InternalTests.csproj
+    arguments: -c Release
+      
+- task: DotNetCoreCLI@2
+  name: Pack
+  inputs:
+    command: 'pack'
+    packagesToPack: 'src/Fub/Fub.csproj'
+    nobuild: true
+    versioningScheme: byEnvVar
+    versionEnvVar: NugetPackageVersion
+    packDirectory: '$(Build.ArtifactStagingDirectory)'
+
+- task: PublishBuildArtifacts@1
+  name: Artifact
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+    
