Package id and author

--- a/src/Fub/Fub.csproj
+++ b/src/Fub/Fub.csproj
@@ -10,6 +10,8 @@
     </PropertyGroup>
 
     <PropertyGroup>
+		<PackageId>Fub</PackageId>
+		<Authors>Tobias van de Ven</Authors>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
 
