Added some comments to clarify the conceptual role of some core classes/interfaces

--- a/src/Fub.Tests/Fub.Tests.csproj
+++ b/src/Fub.Tests/Fub.Tests.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\Fub\Fub.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Variety\" />
+  </ItemGroup>
+
 </Project>
