--- a/src/Fub/Fub.csproj
+++ b/src/Fub/Fub.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-    <TargetFrameworks>net6.0;net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net5.0;net461;netstandard2.0</TargetFrameworks>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	    <WarningsAsErrors>nullable</WarningsAsErrors>
