--- a/src/Fub.InternalTests/Fub.InternalTests.csproj
+++ b/src/Fub.InternalTests/Fub.InternalTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net461;net472;net48;net5.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net461;net472;net48</TargetFrameworks>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
     <LangVersion>latest</LangVersion>
